# claude-orc

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_MCP_SUMMARY.md  README.md  REFACTOR_PLAN.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
.ccbox/: init.sh  mounts.example
docker/claude-code/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run-command-with-env.sh  session-monitor-daemon.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  CCDK_USAGE.md  CCORC_SESSION_MANAGEMENT_GUIDE.md  CLAUDE_SESSION_MANAGEMENT.md  CLI_REFERENCE.md  COMMAND_PROTOCOL.md  COST_MONITORING_GUIDE.md  DEVELOPMENT.md  DKCC_USAGE.md  FLEXIBLE_LAYOUTS.md  IMPLEMENTATION_NOTES.md  README.md  SECURITY_FIXES_SUMMARY.md  SESSION_ARCHITECTURE.md  SESSION_MANAGEMENT_GUIDE.md  TEAM_CONFIGURATION.md  TEST_IMPROVEMENTS_SUMMARY.md  TMUX_UI_IDEAS.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  WORKSPACE_CONFIGURATION.md  state_detection_diagnostics.md
docs/archive/: CCDK_USAGE.md
docs/research/: CLI_OPTIONS_DISCOVERED.md  CURRENT_STATUS.md  MINIMAL_TEST_SCRIPT.md  README.md  RESEARCH_EXPERIMENTS.md  TEST_RESULTS.md  (+2 more)
examples/: devops_team_demo.py  devops_team_demo_enhanced.py  simple_mcp_demo.py  team_mcp_demo.py  team_mcp_demo_enhanced.py  verify_claude_setup.py
plan/: AGENT_PROMPT_DESIGN.md  COMMUNICATION_CHANNELS.md  COMMUNICATION_RULES.md  DESIGN_OVERVIEW.md  KEY_INSIGHTS.md  ORCHESTRATION_SERVICE.md  README.md  ROLE_IDENTITY_DESIGN.md
scripts/: attach-orchestrator.sh  bg.sh  capture-state-snapshot.py  claude-bg  diagnose_agent_states.py  docker-claude-code.sh  install-ccdk.sh  install-ccorc.sh  install-claude-bg.sh  install-dkcc.sh  install-session-cli.sh  monitor_live_states.py  run_tests.sh  setup-host-env.sh  setup.sh  show-state-now.py  start-devops-team.sh
src/: __init__.py  agent_state_monitor.py  claude_launcher_config.py  layout_manager.py  main.py  mcp_central_server.py  mcp_thin_proxy.py  message_delivery.py  mock_launcher.py  orchestrator.py  orchestrator_enhanced.py  session_fork_monitor.py  session_manager.py  session_monitor.py  session_parser.py  simple_launcher.py  team_config_loader.py  team_context_manager.py  tmux_manager.py
tests/: helpers.py  test_team_config_loader.py
(+82 files in other folders)
